@@ -2,9 +2,11 @@ package edu.spring.firstsecurityapp.security;
 
 import edu.spring.firstsecurityapp.model.Person;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class PersonDetails implements UserDetails {
@@ -16,7 +18,9 @@ public class PersonDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        // ROLE_ADMIN, ROL_USER - это роли
+//        return Collections.singletonList(new SimpleGrantedAuthority(person.getRole()));
+        return List.of(new SimpleGrantedAuthority(person.getRole()));
     }
 
     @Override
